--- a/Descartes_Challenge_Lumma.ipynb
+++ b/Descartes_Challenge_Lumma.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f699aef0",
+   "id": "a4e38db0",
    "metadata": {},
    "source": [
     "© Johannes Lumma"
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 594,
-   "id": "5c90a5b4",
+   "id": "7347bee8",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22efcbaf",
+   "id": "65c3b7b5",
    "metadata": {},
    "source": [
     "## Understanding Data\n"
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7913981",
+   "id": "f60fa45d",
    "metadata": {},
    "source": [
     "Before starting with the preprocessing let us understand our data a little bit better:"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 555,
-   "id": "fb453f39",
+   "id": "f10348cd",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f88517c",
+   "id": "12932d29",
    "metadata": {},
    "source": [
     "One notices for instance that more than a third of entries in the column HOME_VAL is zero. We will check whether this might be a sign of an error or if is reasonable:"
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "e0c105e9",
+   "id": "8bb5e1a3",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ba1818",
+   "id": "4b6503f7",
    "metadata": {},
    "source": [
     "As can be seen below with the eye that HOME_VAL correlates with martital status"
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 335,
-   "id": "7bbd5320",
+   "id": "fbbd6bce",
    "metadata": {
     "scrolled": true
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884929cc",
+   "id": "43d6b13d",
    "metadata": {},
    "source": [
     "Of the total 2294 people that have a home value of 0, 1951 (85%) are not married. The reason could be that non-married people tend to live for rent.\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84215bf7",
+   "id": "10b60eb8",
    "metadata": {},
    "source": [
     "## Imputing and Encoding the data"
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 329,
-   "id": "85833426",
+   "id": "bb5a1950",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c6554cc",
+   "id": "2924bbe0",
    "metadata": {},
    "source": [
     "Shape as expected. 39 because of 13 numerical features and 26 categorical ones after enconding. $\\newline$\n",
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89864c47",
+   "id": "7662f6ef",
    "metadata": {},
    "source": [
     "## Baseline Score"
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff77c0d2",
+   "id": "824a1a16",
    "metadata": {},
    "source": [
     "To get a very naive benchmark, we can determine a baseline accuracy score by considering the number of \"successful claims\" divided by the number of total claims:"
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "176023c5",
+   "id": "57e5ec74",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6698ee37",
+   "id": "aa3e7654",
    "metadata": {},
    "source": [
     "### Grid Search"
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea5392a",
+   "id": "cf077234",
    "metadata": {},
    "source": [
     "We build a pipeline using the preprocessed data from Section 3 and applying a Logistic Regression Model:\n",
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 556,
-   "id": "b8a1bd81",
+   "id": "2c0ca126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0ac6165",
+   "id": "f77017e5",
    "metadata": {},
    "source": [
     "The testing set given in this challenge is unlabelled. Therefore, before performing our gridsearch, a further testing set was defined to yield an unbiased classification table:\n"
@@ -1245,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": 557,
-   "id": "a83a4f02",
+   "id": "a117f7ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51acbd0b",
+   "id": "be7061e5",
    "metadata": {},
    "source": [
     "Let us perform a simple grid search. We will optimize for the regularization strength 1/C. Larger values of 1/C specify weaker regularization. $\\newline$\n",
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 558,
-   "id": "19891e38",
+   "id": "96f75d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 559,
-   "id": "1476302f",
+   "id": "e1200e42",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ece2b8",
+   "id": "ad2e7b0c",
    "metadata": {},
    "source": [
     "Best parameters obtained through Grid Search and f1 score:"
@@ -1391,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 560,
-   "id": "bd65ce4e",
+   "id": "7fe6e6ef",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01ba16b",
+   "id": "f90960c9",
    "metadata": {},
    "source": [
     "Below we show the classification report and the confusion matrix:"
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 561,
-   "id": "1d3bf51d",
+   "id": "8011f087",
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f7cc84",
+   "id": "c03c5b56",
    "metadata": {},
    "source": [
     "In particular, we can compare the accuracy to our naive baseline accuracy of 0.26 that we obtained in Section 4.1."
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d2ba0f",
+   "id": "f417a91a",
    "metadata": {
     "heading_collapsed": true
    },
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c575e8",
+   "id": "7ae2392a",
    "metadata": {
     "hidden": true
    },
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "id": "d2284def",
+   "id": "ad5a3bb6",
    "metadata": {
     "hidden": true
    },
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "73a30736",
+   "id": "a7ecca1e",
    "metadata": {
     "hidden": true
    },
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43b71e60",
+   "id": "7661e862",
    "metadata": {
     "hidden": true
    },
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe01ce22",
+   "id": "9b9801ba",
    "metadata": {},
    "source": [
     "### Learning Curves"
@@ -1641,16 +1641,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a72466bb",
+   "id": "47f7f933",
    "metadata": {},
    "source": [
-    "Let us check whether we might be facing issues with over/underfitting and plot the learning curves for our optimal Logarithmic Regression model with C = 100:"
+    "Let us check whether we might be facing issues with over/underfitting and plot the learning curves for our optimal Logistic Regression model with C = 100:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 562,
-   "id": "6515dcaf",
+   "id": "b0a5f40d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 563,
-   "id": "695cfee1",
+   "id": "dc6ee81d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": 564,
-   "id": "37ebb312",
+   "id": "0bc073b3",
    "metadata": {
     "scrolled": true
    },
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdf64197",
+   "id": "738055b6",
    "metadata": {},
    "source": [
     "The curves start converging approximately well from 3000 onwards. We can therefore use our training set to fit our model and make predictions on the test set."
@@ -1736,7 +1736,8 @@
    "id": "752090f0",
    "metadata": {},
    "source": [
-    "Let us get a quick first estimate by using a non-finetuned SVC"
+    "Another model that is well-suited for classification problems is the suppor vector classifier (SVC).\n",
+    "Let us get a quick first estimate by using a non-finetuned SVC using a radial basis function kernel and a regularization parameter C = 0.4:"
    ]
   },
   {
@@ -1747,6 +1748,14 @@
    "outputs": [],
    "source": [
     "svc = SVC(kernel='rbf', C=0.4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df2ead73",
+   "metadata": {},
+   "source": [
+    "Just as we also did for the Logistic Regressor we will also use f1-scoring:"
    ]
   },
   {
@@ -1772,9 +1781,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c480e90b",
+   "metadata": {},
+   "source": [
+    "Let us plot the learning curves to test for overfitting:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "f134a53f",
+   "id": "2a54eddc",
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87121a91",
+   "id": "12b772c2",
    "metadata": {},
    "source": [
     "Convergence is not optimal as there is not data available. We see that SVC is less sensitive to overfitting initially (which can be seen by the difference between training and test score) due to a strong effect of regularization at small training set sizes."
@@ -1837,7 +1854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9134cf0a",
+   "id": "e821bbdc",
    "metadata": {},
    "source": [
     "The testing set given in this challenge is unlabelled. Therefore, before performing our gridsearch, a further testing set was defined to yield an unbiased classification table:"
@@ -1846,7 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 497,
-   "id": "d5969bc5",
+   "id": "c99f990a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ac8d11",
+   "id": "046a39eb",
    "metadata": {},
    "source": [
     "Let us now find optimal parameters for the regulariation hyperparameter C and gamma, which controls the distance of influence of a single training point. We could also optimize for the kernel using a linear one for example. As this is time-consuming we refrain from also optimizing for different kernels in this notebook."
@@ -1898,7 +1915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b55fbf4f",
+   "id": "8a1679d8",
    "metadata": {},
    "source": [
     "Let us use the best hyperparameters found by our grid search and plot its learning curves to check whether overfitting might be an issue:"
@@ -1917,7 +1934,7 @@
   {
    "cell_type": "code",
    "execution_count": 535,
-   "id": "06b2c63a",
+   "id": "3c62c545",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 537,
-   "id": "b9b8091a",
+   "id": "695ee62d",
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4a9217",
+   "id": "29af4750",
    "metadata": {},
    "source": [
     "Let us have a look at the score of our model (and the f1-score in particular):"
@@ -1983,7 +2000,7 @@
   {
    "cell_type": "code",
    "execution_count": 526,
-   "id": "9c1e7dbe",
+   "id": "08fbf7e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,7 +2010,7 @@
   {
    "cell_type": "code",
    "execution_count": 529,
-   "id": "b3caff79",
+   "id": "f2eb1b9d",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2052,7 @@
   {
    "cell_type": "code",
    "execution_count": 568,
-   "id": "6ad473e6",
+   "id": "94fa178b",
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": 572,
-   "id": "cd6b5ed9",
+   "id": "548c655f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 573,
-   "id": "2309f20d",
+   "id": "26b38cf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8ff727",
+   "id": "d1e099e5",
    "metadata": {},
    "source": [
     "Below we compute our predictions:"
@@ -2264,7 +2281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2003bfbf",
+   "id": "3eb1b606",
    "metadata": {},
    "source": [
     "Below we compute the probability for predicting a claim:"
@@ -2273,7 +2290,7 @@
   {
    "cell_type": "code",
    "execution_count": 587,
-   "id": "868f0cb1",
+   "id": "540c3cb5",
    "metadata": {},
    "outputs": [
     {
@@ -2392,7 +2409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78fa62df",
+   "id": "448ea368",
    "metadata": {},
    "source": [
     "Our results will be collected in two csv files:$\\newline$\n",
